Alternating article images, fix bcrypt, vertical align image

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -34,6 +34,21 @@ hr {
   margin: 0 auto;
   padding: 1rem 2rem;
   max-width: 980px;
+  display: flex;
+  align-items:center;
+}
+
+.vcenter {
+  /* min-height: 100%;
+  height: 100%; */
+  /* display: flex;
+  align-items: center;
+  justify-content: center; */
+}
+
+.article-image {
+  width: 100%;
+  max-width: 350px;
 }
 
 .article-white {
